--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "lodash.clonedeep": "^4.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lodash": "^0.1.2",
     "react-scripts": "3.4.3",
     "typescript": "^4.0.2"
   },
